24/Mar/2025
- release version 1.6.3
- added reusable GitHub Workflow for end-to-end (E2E) testing of DNS resolvers
- added example GitHub Workflow integration for BIND9, PowerDNS, Knot Resolver, Unbound, CoreDNS, and Dnsmasq
- added a template for E2E tests

19/Mar/2025
- fixed 0x20 encoding (randomly mixed uppercase and lowercase in DNS queries) in all record injection modules

18/Mar/2025
- release version 1.6.2
- major rework of the polardns test runner `test/run.sh`, now based on actual dig outputs rather than just checksums

13/Mar/2025
- added `rc` modifier allowing to set custom reply codes (statuses) for DNS responses (e.g., NOERROR, NXDOMAIN, SERVFAIL)
- implemented size limits in various functions to prevent errors caused by requesting oversized responses
- added tests (total test count: 2439)

10/Mar/2025
- release version 1.6.1
- restructured the project into a package installable via `pip`
- created a wrapper `polardns.py` to support traditional standalone usage
- published the `polardns` package to PyPI repository (https://pypi.org/project/polardns/)
- updated documentation
- code cleanup

20/Feb/2025
- updated documentation
- published Docker image to Docker Hub (oryxlabs/polardns)
- added a script `gendocs.py` for generating the documentation

04/Feb/2025
- release version 1.6.0

03/Feb/2025
- new catalog documentation using GitHub Pages, providing detailed explanations, examples, and PCAP files for each example
- major rework of all modules to align with the new documentation format, including examples and in-depth explanations
- added tests (total test count: 2407)

28/Jan/2025
- deprecated the `bigcname` feature, succeeded by the `nfz` modifier
- deprecated the `cgena` feature, succeeded by the `nfz` modifier
- deprecated the `cgenb` feature, succeeded by the `nfz` modifier
- deprecated the `cnamefuzz1` feature, succeeded by the `nfz` modifier
- deprecated the `cnamefuzz2` feature, succeeded by the `nfz` modifier