@@ -10,7 +10,7 @@ nav_order: 4
 
 Here's a high-level overview of what you need in order to start testing recursive DNS servers.
 
-1. Purchase a domain for your tests e.g., `example.com` using your favorite domain registrar.
+1. Purchase a domain for your tests e.g., `example123.com` using your favorite domain registrar.
 2. Get 2 Linux VPS instances with public and <u>static</u> IP addresses - these will be your nameservers.
 3. Deploy the PolarDNS server on both instances.
 4. Edit the ``polardns/polardns.toml`` configuration file on each instance and change your domain name and nameserver IP addresses accordingly - same configuration on both.
